src/test/ui/issues/issue-25439.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-25439.rs:8:5
   |
LL |     fix(|_, x| x);
   |     ^^^^--------^
   |         |
   |         expected `_`
   |
note: function defined here
  --> $DIR/issue-25439.rs:3:4
   |
LL | fn fix<F>(f: F) -> i32 where F: Fn(Helper<F>, i32) -> i32 {
   |    ^^^    ----
help: provide an argument of the correct type
   |
LL |     fix({_});
   |     ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
